--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "vue": "^2.5.2",
+    "vue": "^2.6.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.2.28"
+    "vuetify": "^2.2.28",
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
